--- a/packonfig-test/packonfig-test/App.xaml
+++ b/packonfig-test/packonfig-test/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="packonfig_test.App"
+﻿<Application x:Class="MusicEditorApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:packonfig_test"
+             xmlns:local="clr-namespace:MusicEditorApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
